[package]
name = "DataBaseManager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19"
crossterm = "0.25"

strum = "0.24"
strum_macros = "0.24"

rand = "0.8.5"

mysql = "*"

regex = "1"
lazy_static = "*"

time = {version = "*", features = ["serde", "macros"] }

ron = "0.8"
serde = { version = "1", features = ["derive"] }

petgraph = "0.6.*"

serial_test = "0.10.0"

log4rs = "1.2.0"
log = "*"

indoc = "1.0"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "benchmark"
harness = false